--- a/styles.css
+++ b/styles.css
@@ -35,15 +35,34 @@ nav a {
 }
 
 .glass {
-  position: absolute;
-
+  margin-left: 1em;
+  width: 20px;
+  align-self: center;
 }
 
-header > div > form > input {
-  background-color: rgba(0,0,0,.05);
+.npm-logo {
+  width: 40px;
+  margin-left: 1.5rem;
 }
 
-header > div > form > label {
+.zero-photo, .team-photo, .familiar-photo, .audit-photo {
+  width: 30px;
+  align-self: flex-start;
+}
+
+.search-space {
+  padding: 10px 0 10px 0;;
+}
+
+input {
+  background-color: transparent;
+  width: 800px;
+  border: none;
+  padding: 12px 20px;
+  margin: 0 5px;
+}
+
+.search-bar {
   background-color: rgba(0,0,0,.05);
 }
 
@@ -52,6 +71,8 @@ header > div > form > label {
   color: white;
   border: none;
   width: 70px;
+  padding: 12px 20px;
+  cursor: pointer;
 }
 
 #join {
@@ -59,11 +80,13 @@ header > div > form > label {
   border: 1px solid black;
   color: black;
   margin-right: 20px;
+  padding: 2px 5px;
 }
 
 #login {
   text-decoration: none;
   color: black;
+  margin-right: 1.5rem;
 }
 
 #introduction {
@@ -126,27 +149,34 @@ h2 {
 
 #description {
   text-align: center;
+  padding-bottom: 80px;
 }
 
 #description article {
   width: 650px;
   margin: auto;
   padding-top: 50px;
+  font-size: 0.9em;
 }
 
 h3 {
   color: #fb3e44;
+  align-self: flex-start;
+  font-size: 1em;;
 }
 
 #benefits {
   display: flex;
   justify-content: space-evenly;
+  padding-bottom: 80px;
 }
 
 #benefits .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 15%;
+  font-size: 0.8em;
 }
 
 .createOrg {
